human-intervention-logs/org.apache.kerby:kerb-client:1.1.0/gradle-test/gradle-test-2026-06-07T05-41-19-133135Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: org.apache.kerby:kerb-client:1.1.0
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/gradlew nativeTest`
Executing test...
-------
Starting a Gradle Daemon, 1 busy and 1 incompatible Daemons could not be reused, use --status for details
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :jar
> Task :checkTestTimeoutAnnotations
> Task :processTestResources NO-SOURCE
> Task :tck-test-support:compileJava
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes
> Task :tck-test-support:jar

/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:89: error: method getKDCList in class ClientUtil cannot be applied to given types;
> Task :compileTestJava
        List<String> kdcList = ClientUtil.getKDCList(setting);
                                         ^
  required: String,KrbSetting
  found:    KrbSetting
  reason: actual and formal argument lists differ in length
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:302: error: requireEku has private access in PkinitRequestOpts
        assertThat(pkinitRequestOpts.requireEku).isTrue();
                                    ^
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:303: error: acceptSecondaryEku has private access in PkinitRequestOpts
        assertThat(pkinitRequestOpts.acceptSecondaryEku).isFalse();
                                    ^
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:304: error: usingRsa has private access in PkinitRequestOpts
        assertThat(pkinitRequestOpts.usingRsa).isFalse();
                                    ^
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:305: error: dhSize has private access in PkinitRequestOpts
        assertThat(pkinitRequestOpts.dhSize).isPositive();
                                    ^
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:306: error: usingIdToken has private access in TokenContext
        assertThat(tokenContext.usingIdToken).isTrue();
                               ^
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:307: error: token has private access in TokenContext
        assertThat(tokenContext.token).isNull();
                               ^
7 errors


FAILURE: > Task :compileTestJava FAILED

Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> [Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/build/reports/problems/problems-report.html
Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:89: error: method getKDCList in class ClientUtil cannot be applied to given types;
          List<String> kdcList = ClientUtil.getKDCList(setting);
                                           ^
    required: String,KrbSetting
    found:    KrbSetting
    reason: actual and formal argument lists differ in length
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:302: error: requireEku has private access in PkinitRequestOpts
          assertThat(pkinitRequestOpts.requireEku).isTrue();
                                      ^
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:303: error: acceptSecondaryEku has private access in PkinitRequestOpts
          assertThat(pkinitRequestOpts.acceptSecondaryEku).isFalse();
                                      ^
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:304: error: usingRsa has private access in PkinitRequestOpts
          assertThat(pkinitRequestOpts.usingRsa).isFalse();
                                      ^
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:305: error: dhSize has private access in PkinitRequestOpts
          assertThat(pkinitRequestOpts.dhSize).isPositive();
                                      ^
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:306: error: usingIdToken has private access in TokenContext
          assertThat(tokenContext.usingIdToken).isTrue();
                                 ^
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/tests/src/org.apache.kerby/kerb-client/1.1.0/src/test/java/org_apache_kerby/kerb_client/Kerb_clientTest.java:307: error: token has private access in TokenContext
          assertThat(tokenContext.token).isNull();
                                 ^
  7 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.


BUILD FAILEDYou can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.
 in 7s

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 5 executed, 8 up-to-date

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/6961-10731b70/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for org.apache.kerby:kerb-client:1.1.0 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 8s
9 actionable tasks: 1 executed, 8 up-to-date
